# Courses

./: .gitinore
Udemy/Advance_C++_Programming/Abstract/: main.cpp
Udemy/Advance_C++_Programming/Animal/: main.cpp
Udemy/Advance_C++_Programming/BaseClass/: Makefile  main.cpp
Udemy/Advance_C++_Programming/Exception/: main.cpp
Udemy/Advance_C++_Programming/Exercise_1/: main.cpp
Udemy/Advance_C++_Programming/Exercise_1_template/: main.cpp
Udemy/Advance_C++_Programming/Exercise_2/: main.cpp
Udemy/Advance_C++_Programming/Exercise_2_template/: main.cpp
Udemy/Advance_C++_Programming/Exercise_Exception/: main.cpp
Udemy/Advance_C++_Programming/Generic/: main.cpp
Udemy/Advance_C++_Programming/Generic2/: Makefile  main.cpp
Udemy/Advance_C++_Programming/mult_data_template/: main.cpp
Udemy/Building_Alexa_Skills_For_Home_Automation/: draft.txt
Udemy/C_CPlusPlus_Pointers_Applications/: 01-Pointer_Basic.cpp  04-muldimensional_arrays.cpp  05-multidimensional_arrays_on_heap.cpp  heap_based_arrays.cpp
Udemy/C_CPlusPlus_Pointers_Applications/02-ArrayAsReference/: main.cpp
Udemy/DesignPatternsC++/01-SingleResposabilityPinciple/: version  version1.c  version2.c
Udemy/DesignPatternsC++/02-Open_Close/: article.txt  version  version1.cpp  version2.cpp  version3.cpp
Udemy/DesignPatternsC++/03-Liskov_Substitution/: .cproject  .project  version1.cpp
Udemy/DesignPatternsC++/04-Interface_Segregation_Principle/: .cproject  .project  main.cpp
Udemy/DesignPatternsC++/06-Dependency_Inversion_principle/: .project  main.cpp
Udemy/DesignPatternsC++/06-Dependency_Inversion_principle2/: .cproject  .project  main.cpp
Udemy/DesignPatternsC++/07-Builder/: .cproject  .project  main.cpp
Udemy/FreeRtos_Arduino/01-Creating_Tasks/: .project  01-Creating_Tasks.cpp
Udemy/FreeRtos_Arduino/02-Profiling_Tasks/: .project  02-Profiling_Tasks.cpp
Udemy/FreeRtos_Arduino/03-TaskParameters/: .project
Udemy/FreeRtos_Arduino/04-TaskPriority/: .project  04-TaskPriority.cpp
Udemy/FreeRtos_Arduino/05-TaskPriorityRunTime/: .project  05-TaskPriorityRunTime.cpp
Udemy/FreeRtos_Arduino/06-TaskSuspendandResume/: .project  06-TaskSuspendandResume.cpp
Udemy/FreeRtos_Arduino/07-Queue/: .project  main.cpp
Udemy/FreeRtos_Arduino/08-Queue_send_different_tasks/: .project  main.cpp
Udemy/FreeRtos_Arduino/09-Queue_send_struct/: .cproject  .project  main.cpp
Udemy/FreeRtos_Arduino/10-QueueString/: .project  main.cpp
Udemy/FreeRtos_Arduino/11-QueueSet/: .project  main.cpp
Udemy/FreeRtos_Arduino/12-Timer_OneShot_AutoReload/: .project  main.cpp
Udemy/FreeRtos_Arduino/13-Timer_Multiple/: .project  main.cpp
Udemy/FreeRtos_Arduino/14-Binary_Semaphore/: .project  main.cpp
Udemy/FreeRtos_Arduino/15-Counting_Semaphore/: .project  main.cpp
Udemy/FreeRtos_Arduino/16-Mutual_Exclusion/: .project  main.cpp
Udemy/FreeRtos_Arduino/17-Gate_Keeper/: .project  main.cpp
Udemy/FreeRtos_Arduino/18-Event_Groups/: .project  main.cpp
Udemy/FreeRtos_Arduino/19-Managing_Tasks_EventGroup/: .project  main.cpp
Udemy/FreeRtos_Arduino/20-Syncronizing_Tasks_EventGroup/: .project  main.cpp
Udemy/FreeRtos_Arduino/21-Syncronizing_Tasks_ISR_Semaphore/: .project  main.cpp
Udemy/FreeRtos_Arduino/22-Syncronizing_Tasks_ISR_Queue/: .project  main.cpp
Udemy/FreeRtos_Arduino/23-No_Preemption/: .project  main.cpp
Udemy/FreeRtos_Arduino/24-TaskNotify/: .project  main.cpp
Udemy/Learning_CPlusPlus_Making_Games/.metadata/: version.ini
Udemy/MyCourse/botao/: .cproject  .project  botao.cpp
Udemy/MyCourse/condicional/: .cproject  .project  main.c
Udemy/MyCourse/ligalampada/: .cproject  .project  ligalampada.cpp
Udemy/Qt_GUI_Development_Beg/01-FirstApp/: 01-FirstApp.pro  widget.cpp  widget.ui
Udemy/Qt_GUI_Development_Beg/01-Teaser/: 01-Teaser.pro  widget.cpp  widget.h  widget.ui
Udemy/Qt_GUI_Development_Beg/02-GuessNumber/: 02-GuessNumber.pro  widget.cpp  widget.h  widget.ui
Udemy/Qt_GUI_Development_Beg/03-Signal_Slots/: 03-Signal_Slots.pro  widget.cpp  widget.h  widget.ui
Udemy/Qt_GUI_Development_Beg/04-QMainWindow/: 04-QMainWindow.pro  mainwindow.cpp  mainwindow.h
Udemy/Qt_GUI_Development_Beg/05-QMessageBox/: 05-QMessageBox.pro  widget.cpp
Udemy/Qt_GUI_Development_Beg/07-QLineEdit/: 07-QLineEdit.pro  widget.cpp
Udemy/Qt_MultiThreading/01-CreateThread/: 01-CreateThread.pro  widget.cpp  widget.h  widget.ui
Udemy/qml_beginner/: README
Udemy/qml_beginner/01-Demo/: main.qml
Udemy/qml_beginner/02-Demo/: main.qml
Udemy/qml_beginner/03-DataType/: main.qml
Udemy/qml_beginner/04-PropertyBind/: main.qml
books/TCPIP_SocketsInC/: CMakeLists.txt
books/TCPIP_SocketsInC/Broadcast/: CMakeLists.txt  broadcastReceiver.c  broadcastSender.c
books/TCPIP_SocketsInC/Multicast/: CMakeLists.txt  multicastReceiver.c  multicastSender.c
books/TCPIP_SocketsInC/Signal/: CMakeLists.txt  sigaction.c
books/TCPIP_SocketsInC/TCPEcho/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tcpechoclient.c  tcpechoserver.c
books/TCPIP_SocketsInC/TCPEchoServerFork/: CMakeLists.txt  tcpEchoServerFork.c
books/TCPIP_SocketsInC/TCPEchoServerForkN/: CMakeLists.txt  tcpEchoServerForkN.c
books/TCPIP_SocketsInC/TCPEchoServerSelect/: CMakeLists.txt  tcpEchoServerSelect.c
books/TCPIP_SocketsInC/TCPEchoServerThread/: CMakeLists.txt  tcpEchoServerThread.c
books/TCPIP_SocketsInC/UDPEcho/: CMakeLists.txt  udpechoclient.c  udpechoserver.c
books/TCPIP_SocketsInC/UDPEchoClient-Timeout/: CMakeLists.txt  UDPEchoClient-Timeout.c
books/TCPIP_SocketsInC/UDPEchoServer-SIGIO/: CMakeLists.txt  UDPEchoServer-SIGIO.c
books/TCPIP_SocketsInC/lib/: CMakeLists.txt
books/TCPIP_SocketsInC/lib/include/server/: tcpechoserver.h
books/TCPIP_SocketsInC/lib/include/servertcp/: servertcp.h
books/TCPIP_SocketsInC/lib/include/util/: util.h
books/TCPIP_SocketsInC/lib/source/servertcp/: servertcp.c
books/TCPIP_SocketsInC/lib/source/util/: util.c
youtube/CFB_Cursos_CPlusplus/: enum.cpp  stack.cpp
youtube/EstruturaDeDados_Descomplicada/: Exercises_Control
youtube/LinguagemC_Descomplicada/: Exercises_Control
(+276 files in other folders)
